Fix: reorganized my tags for more visibility and change the fontsize by font family on the body tag 4-style.css

--- a/CSS_advanced/styles/4-style.css
+++ b/CSS_advanced/styles/4-style.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
@@ -9,31 +9,31 @@
     --font-family-title: "Helvetica Neue, Helvetica, Arial, sans-serif";
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-body{
+body {
     color: var(--text-color);
-    font-size: var(--font-family-base);
+    font-family: var(--font-family-base);
 }
 
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
 }
 
-a{
+a {
     color: var(--text-color);
 }
 
-.visually-hidden{
+.visually-hidden {
     display: none;
 }
 
-.card-category{
+.card-category {
     color: var(--color-primary);
 }
 
-.section-tagline{
+.section-tagline {
     color: var(--color-primary);
 }
